# airflow-dagster-examples

./: .gitignore  README.md
dbt/: dagster.py  functional_requirements.txt
duckdb/: dagster.py  functional_requirements.txt
etl_example/: airflow.py  dagster.py  functional_requirements.txt
example_astronauts/: dagster.py  dagster_version.py  functional_requirements.txt
list_files/: dagster_version.py  functional_requirements.txt
scripts/: Makefile  README.md  evaluate_results.py  generate.py  pyproject.toml  vectorize_dagster_docs.py
scripts/airflow2dagster/: __main__.py  add_asset_checks.py  add_config.py  add_definitions.py  add_dependencies.py  add_disincentivize_io_managers.py  add_integration.py  add_materialization_results.py  add_python_best_practices.py  add_retry_policy.py  add_schedule.py  add_sensor.py  constants.py  model.py  structured_output.py  translate_core_logic.py  utils.py
scripts/metrics/: code_bleu.py  functional_requirements.py  llm_checks.py  run_validity.py  utils.py
scripts/results/: supervised_leaderboard.csv
scripts/results/dbt/: gpt_dspy.py  gpt_naive.py  human.py
scripts/results/duckdb/: gpt_dspy.py  gpt_naive.py  human.py
scripts/results/etl_example/: gpt_dspy.py  gpt_naive.py  human.py
scripts/results/example_astronauts/: airflow.py  gpt_dspy.py  gpt_naive.py
scripts/results/list_files/: gpt_dspy.py  gpt_naive.py  human.py
scripts/results/sensor/: gpt_dspy.py  gpt_naive.py
scripts/results/snowflake_data_quality/: gpt_dspy.py  gpt_naive.py
sensor/: dagster.py  dagster_version.py  functional_requirements.txt
(+1 files in other folders)
